--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
   <head>
     <title>Demo</title>
     <%= csrf_meta_tags %>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.css">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.css">
 
@@ -25,6 +26,20 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/ideas">Ideas</a></li>
+            <p class="navbar-text pull-right">
+<% if user_signed_in? %>
+
+<%= image_tag current_user.gravatar_url, size: "32x32", alt: "Edit Entry"%>
+  Logged in as <strong><%= current_user.user_name || current_user.email %></strong>.
+<%= link_to 'Edit Password', edit_user_registration_path, :class => 'navbar-link' %> |
+<%= link_to 'Edit Profile', edit_user_path, :class => 'navbar-link' %> |
+  <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+<% else %>
+  <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
+  <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+<% end %>
+            
+<li ><%= link_to 'New Idea', new_idea_path %></li>
           </ul>
         </div>
       </div>
@@ -32,6 +47,12 @@
    
    
    <div class="container">
+     <% if notice %>
+  <p class="alert alert-success"><%= notice %></p>
+<% end %>
+<% if alert %>
+  <p class="alert alert-danger"><%= alert %></p>
+<% end %>
     <%= yield %>
   </div>
     <footer>
