--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,3 +32,14 @@ footer {
   background-color: #ebebeb;
   padding: 30px 0;
 }
+
+/*.custom_btn {*/
+    /*background-color: #4CAF50; */
+/*    border: none;*/
+/*    color: white;*/
+/*    padding: 15px 32px;*/
+/*    text-align: center;*/
+/*    text-decoration: none;*/
+/*    display: inline-block;*/
+/*    font-size: 16px;*/
+/*}*/
