--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -12,23 +12,29 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :user_name %>
-    <%= form.text_field :user_name, id: :comment_user_name %>
+  <div class="form-group row">
+    <%= form.label :user_name, class: "col-sm-2 control-label" %>
+    <div class="col-sm-4">
+    <%= form.text_field :user_name, id: :comment_user_name, class: "form-control" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label :body %>
-    <%= form.text_area :body, id: :comment_body %>
+  <div class="form-group row">
+    <%= form.label :body, class: "col-sm-2 control-label" %>
+      <div class="col-sm-4">
+    <%= form.text_area :body, id: :comment_body,class: "form-control" %>
+    </div>
   </div>
   <%= form.hidden_field :idea_id %>
 
-<div class="field">
-  <%= form.label :picture %><br>
-  <%= form.file_field :picture %>
-</div
+<div class="form-group row">
+  <%= form.label :picture, class:"col-sm-2 control-label" %><br>
+   <div class="col-sm-4">
+  <%= form.file_field :picture,class:"form-control"  %>
+</div>
 
-  <div class="actions">
+
+  <div class="actions row">
     <%= form.submit %>
   </div>
 <% end %>
